LR bike assignment

--- a/bike_lr.ipynb
+++ b/bike_lr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "a2e61c8e",
+   "id": "542b5787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "36995de7",
+   "id": "a7e177ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "1fdcef8f",
+   "id": "a86ed299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "121451ab",
+   "id": "f8ea4e37",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c40a1b5c",
+   "id": "77703438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "8eb487f5",
+   "id": "1850bf3e",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "990ee451",
+   "id": "6a6a6446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "a9d30f5c",
+   "id": "0d6f0597",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "04b413eb",
+   "id": "2006ec2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "d3e0d23c",
+   "id": "f48dd2ec",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "83a29e69",
+   "id": "7fc1ffe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "19ea9bc9",
+   "id": "50a9032c",
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "778d342d",
+   "id": "07c34d1b",
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "2a082aaa",
+   "id": "c5ea63b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "b2fb62e5",
+   "id": "5316addc",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "d5a3659c",
+   "id": "11082988",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "47b50f2f",
+   "id": "4031f9a3",
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "3bc37e1e",
+   "id": "e3949f2a",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "03ae7761",
+   "id": "7cec4915",
    "metadata": {},
    "outputs": [
     {
@@ -1938,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "2f754b1e",
+   "id": "e6bc516f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "53004092",
+   "id": "22634d86",
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "4f52c58a",
+   "id": "491181e9",
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "019b464d",
+   "id": "26bc0a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2345,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "dfcb1f18",
+   "id": "d3ab4aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "aa4e9878",
+   "id": "e46cd8f1",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "a4ef83a1",
+   "id": "c5ba81c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2540,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "202ef989",
+   "id": "1ecae247",
    "metadata": {},
    "outputs": [
     {
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "bdc21841",
+   "id": "5191449a",
    "metadata": {},
    "outputs": [
     {
@@ -2582,7 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "c58e5bc2",
+   "id": "943ad8f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2592,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "101394c5",
+   "id": "e987f37d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2602,7 +2602,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "3118ced5",
+   "id": "a942d396",
    "metadata": {},
    "outputs": [
     {
@@ -2781,7 +2781,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "101a3eb0",
+   "id": "575e73ac",
    "metadata": {},
    "outputs": [
     {
@@ -2804,7 +2804,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "dcf8353f",
+   "id": "d1c718e3",
    "metadata": {},
    "outputs": [
     {
@@ -2827,7 +2827,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "5d0ebf07",
+   "id": "d9b329f2",
    "metadata": {},
    "outputs": [
     {
@@ -2993,7 +2993,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "79b39bf9",
+   "id": "1c38015c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3006,7 +3006,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "645d4988",
+   "id": "a6209363",
    "metadata": {},
    "outputs": [
     {
@@ -3043,7 +3043,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "70fa375d",
+   "id": "d83051e3",
    "metadata": {},
    "outputs": [
     {
@@ -3206,7 +3206,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "a05cbac4",
+   "id": "9d694846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3216,7 +3216,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "6ebc658b",
+   "id": "135f9ec8",
    "metadata": {},
    "outputs": [
     {
@@ -3368,7 +3368,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "1bd6fc16",
+   "id": "1156d233",
    "metadata": {},
    "outputs": [
     {
@@ -3546,7 +3546,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "e07c1bc8",
+   "id": "5a1ac479",
    "metadata": {},
    "outputs": [
     {
@@ -3705,7 +3705,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "239d307f",
+   "id": "a35ddf0b",
    "metadata": {},
    "outputs": [
     {
@@ -3745,7 +3745,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "be335a91",
+   "id": "502e9a9c",
    "metadata": {},
    "outputs": [
     {
@@ -3904,7 +3904,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "a0d73e78",
+   "id": "c2070553",
    "metadata": {},
    "outputs": [
     {
@@ -4050,7 +4050,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "ca30e96a",
+   "id": "6566d463",
    "metadata": {},
    "outputs": [
     {
@@ -4203,7 +4203,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "e26619bd",
+   "id": "2df18422",
    "metadata": {},
    "outputs": [
     {
@@ -4362,7 +4362,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "302239a5",
+   "id": "2f2c773d",
    "metadata": {},
    "outputs": [
     {
@@ -4494,7 +4494,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "fa2f4b56",
+   "id": "a6f706b9",
    "metadata": {},
    "outputs": [
     {
@@ -4641,7 +4641,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "f12315fd",
+   "id": "411e8445",
    "metadata": {},
    "outputs": [
     {
@@ -4794,7 +4794,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "87ec3a8b",
+   "id": "ef85f8bf",
    "metadata": {},
    "outputs": [
     {
@@ -4920,7 +4920,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "5fff20ee",
+   "id": "686701d4",
    "metadata": {},
    "outputs": [
     {
@@ -5061,7 +5061,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "940d1c8c",
+   "id": "895ae640",
    "metadata": {},
    "outputs": [
     {
@@ -5210,7 +5210,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "8518842f",
+   "id": "18f5a3d7",
    "metadata": {},
    "outputs": [
     {
@@ -5330,7 +5330,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "596aabb5",
+   "id": "233ad005",
    "metadata": {},
    "outputs": [
     {
@@ -5465,7 +5465,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "084b8f40",
+   "id": "918c83dd",
    "metadata": {},
    "outputs": [
     {
@@ -5610,7 +5610,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "eb9030d1",
+   "id": "d0da2c7d",
    "metadata": {},
    "outputs": [
     {
@@ -5724,7 +5724,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "a61130b4",
+   "id": "5d5825e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5734,7 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "cdd25a03",
+   "id": "69be6a4b",
    "metadata": {},
    "outputs": [
     {
@@ -5756,7 +5756,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "3d07b84c",
+   "id": "f18124a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5767,7 +5767,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "731e4150",
+   "id": "ef34f530",
    "metadata": {},
    "outputs": [
     {
@@ -6010,7 +6010,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "e8eb0d8c",
+   "id": "c12c7f22",
    "metadata": {},
    "outputs": [
     {
@@ -6176,7 +6176,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "5031deb4",
+   "id": "ca2a8efc",
    "metadata": {},
    "outputs": [
     {
@@ -6312,7 +6312,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "19b419f0",
+   "id": "d7ab95a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6323,7 +6323,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "646e1e0a",
+   "id": "a19d9ef1",
    "metadata": {},
    "outputs": [
     {
@@ -6343,8 +6343,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "id": "016cb3a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "9b0df0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7825996165023847"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_adjusted = 1-(1-r2_score(y_test, y_test_pred))*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
+    "r2_adjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6f44f48d",
+   "id": "9b56108f",
    "metadata": {},
    "outputs": [],
    "source": []
